--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "cviebrock/eloquent-sluggable": "^4.2",
+        "cviebrock/image-validator": "^2.2",
         "intervention/image": "^2.3",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.4.*",
