--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.1.10"
+  },
+  "dependencies": {
+    "alertify.js": "^1.0.12",
+    "izitoast": "^1.1.1"
   }
 }
